--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Molly",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^1.18.11",
     "sqlite3": "^4.0.6"
   },
   "dependencies": {
